<resources>

    <!-- O. APP NAME -->
    <string name="app_name">ecoclinic</string>
    <string name="clinic_logo">Logo clínica</string>


    <!-- 1. Fragments names -->
    <string name="fragment_information_title">Información</string>
    <string name="fragment_appointments_title">Citas</string>
    <string name="fragment_user_profile_title">Usuario</string>

    <!-- 2. Information Screen -->
    <string name="in_fr_header">Consulta de ecografía y medicina general de la doctora Isabel Gil Carrera</string>
    <string name="in_fr_whoami">¿Quien soy?</string>
    <string name="in_fr_whoami_description">Sea bienvenid@ a mi consulta. Soy la Dra. Isabel Gil Carrera, médica de familia. Ofrezco una atención cercana y personalizada, combinando la consulta médica con ecografías diagnósticas para un mejor seguimiento de tu salud. Mi objetivo es acompañarte de forma clara, accesible y de confianza en cada etapa.</string>
    <string name="in_fr_contact">Contacto</string>
    <string name="in_fr_contact_detail">Se atiende mediante cita previa, concretada a traves de el telefono, correo electronico o esta misma app.</string>
    <string name="in_fr_contact_info"><b>Telefono:</b> 640 29 26 14 \n<b>Correo electronico:</b> igecografias@gmail.com</string>
    <string name="in_fr_location">Ubicación</string>
    <string name="in_fr_location_detail">Me encuentro en, <b>Ctra. Casillas, 6, Planta 1 – Local 5, 05420 Sotillo de la Adrada, Ávila, España.</b></string>
    <string name="in_fr_phone_number">640292614</string>
    <string name="in_fr_call_now">Llama ya</string>
    <string name="in_fr_toolbar_title">Citas</string>

    <!-- 3. App Messages -->
    <string name="app_intent_error">No hay aplicaciones disponibles</string>

    <!-- 4. Appointments Screen -->
    <string name="appt_fr_headline">¡Vaya! Parece que no tienes ninguna cita agendada...</string>
    <string name="appt_fr_details">No te preocupes puedes agendar una cita en el boton en la parte inferior central de la pantalla o puedes pulsar Agendar cita.</string>
    <string name="appt_fr_button">Agendar cita</string>
    <string name="appt_vw_cancel">Cancelar</string>
    <string name="appt_vw_headline">Cita con la Dra Isabel Gil</string>
    <string name="appt_vw_timestamp">Fecha y hora:\u0020</string>
    <string name="appt_vw_details">Detalles:\u0020</string>
    <string name="appt_vw_type">Tipo de consulta:\u0020</string>

    <!-- 5. Log in Screen -->
    <string name="log_fr_welcome">¡Bienvenido! Inicia sesión o crea tu cuenta para continuar!</string>
    <string name="log_fr_login">¡Inicia Sesión!</string>
    <string name="log_fr_email">Correo electrónico</string>
    <string name="log_fr_email_hint">example@gmail.com</string>
    <string name="log_fr_password">Contraseña</string>
    <string name="log_fr_signup">Regístrate</string>
    <string name="log_fr_log_in">Iniciar Sesión</string>
    <string name="log_fr_forgotten">¿Olvidaste tu contraseña?</string>
    <string name="log_fr_passwd_hint">Introduce tu contraseña</string>

    <!-- 6. Sign up Screen -->
    <string name="signup_fr_headline">Rellena la siguiente información para poder registrarte.</string>
    <string name="signup_fr_name">Nombre</string>
    <string name="signup_fr_surname">Apellidos</string>
    <string name="signup_fr_address">Dirección Postal</string>
    <string name="signup_fr_address_hint">Nombre de vía, número y portal</string>
    <string name="signup_fr_password_auth_hint">Repita la contraseña</string>
    <string name="signup_fr_button">Continuar</string>
    <string name="signup_fr_goback">Tengo cuenta</string>
    <string name="signup_fr_passwd_error">Las contraseñas no coinciden*</string>
    <string name="signup_fr_user_error">El usuario ya existe</string>
    <string name="signup_fr_phone_hint">123 - 456 - 789</string>
    <string name="signup_fr_phone">Número de teléfono</string>
    <string name="signup_fr_age">Edad</string>
    <string name="signup_fr_gender">Género</string>
    <string name="signup_fr_error_email">La dirección de correo no es valida</string>
    <string name="signup_fr_passwd_hint">Introduce una contraseña</string>
    <string name="signup_fr_weak_password_error">La contraseña es debil</string>
    <string name="signup_fr_error_pn">Introduce un teléfono valido</string>
    <string name="signup_fr_spinner_male">Hombre</string>
    <string name="signup_fr_spinner_female">Mujer</string>
    <string name="signup_fr_spinner_other">Otro</string>
    <string name="signup_fr_login_succ">Login correcto</string>
    <string name="signup_fr_error">Error</string>
    <string name="signup_fr_unknown_error">Unknown error</string>
    <string name="sigup_fr_login_failed">Inicio de sesión fallado</string>
    <string name="sigup_fr_credentials_failed">Credenciales incorrectas</string>

    <!-- 7. Reset Password Screen -->
    <string name="reset_password_fr_title">Restablecer contraseña</string>
    <string name="reset_password_fr_instructions">Introduce tu correo electronico.</string>

</resources>