<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/space_m">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/in_fr_header"
                style="@style/AppHeadline"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/space_m"
                android:text="@string/in_fr_header"
                app:layout_constraintBottom_toTopOf="@id/in_fr_whoami"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/in_fr_whoami"
                style="@style/AppHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_m"
                android:text="@string/in_fr_whoami"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/in_fr_header" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/in_fr_whoami_description"
                style="@style/AppSupportingText"
                android:layout_width="181dp"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_m"
                android:text="@string/in_fr_whoami_description"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/in_fr_whoami" />

            <ImageView
                android:id="@+id/in_fr_image"
                android:layout_width="152dp"
                android:layout_height="192dp"
                android:scaleType="centerCrop"
                android:src="@drawable/img_isabel"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@id/in_fr_whoami_description" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/in_fr_divider_1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/space_m"
                app:dividerColor="@color/md_theme_primaryContainer"
                app:layout_constraintTop_toBottomOf="@id/in_fr_image" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/in_fr_contact"
                style="@style/AppHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_m"
                android:text="@string/in_fr_contact"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/in_fr_divider_1" />


            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/in_fr_contact_detail"
                style="@style/AppSupportingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_m"
                android:text="@string/in_fr_contact_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/in_fr_contact" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/in_fr_contact_info"
                style="@style/AppSupportingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_s"
                android:text="@string/in_fr_contact_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/in_fr_contact_detail" />

            <com.google.android.material.divider.MaterialDivider
                android:id="@+id/in_fr_divider_2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginVertical="@dimen/space_m"
                app:dividerColor="@color/md_theme_primaryContainer"
                app:layout_constraintTop_toBottomOf="@id/in_fr_contact_info" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/in_fr_location"
                style="@style/AppHeadline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_m"
                android:text="@string/in_fr_location"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/in_fr_divider_2" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/in_fr_location_detail"
                style="@style/AppSupportingText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="@dimen/space_m"
                android:text="@string/in_fr_location_detail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/in_fr_location" />

            <include
                layout="@layout/activity_maps"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginVertical="@dimen/space_m"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@id/in_fr_location_detail" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/in_fr_phone_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/md_theme_primaryContainer"
        android:text="@string/in_fr_call_now"
        android:layout_marginStart="@dimen/space_m"
        android:layout_marginBottom="@dimen/space_s"
        android:textAllCaps="false"
        android:textStyle="bold"
        app:icon="@drawable/ic_phone"
        app:iconGravity="start"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearance.App.SmallComponent" />

</androidx.constraintlayout.widget.ConstraintLayout>